--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -3,14 +3,20 @@
   width: 100vw;
   h1 {
     padding-top: 25rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
     font-size: 8rem;
     padding-bottom: 4rem;
     text-align: center;
+    font-weight: 500;
   }
   h2 {
     padding-top: 5rem;
-    font-size: 3rem;
+    font-size: 3.5rem;
     text-align: center;
+    font-weight: 200;
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
 }
 #myVideo {
