--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -9,14 +9,16 @@
     padding-bottom: 4rem;
     text-align: center;
     font-weight: 500;
+    color: rgb(26, 25, 25);
   }
   h2 {
     padding-top: 5rem;
-    font-size: 3.5rem;
+    font-size: 3rem;
     text-align: center;
     font-weight: 200;
     padding-left: 3rem;
     padding-right: 3rem;
+    color: rgb(26, 25, 25);
   }
 }
 #myVideo {
