--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,5 @@
 @import "abstracts/variables", "abstracts/mixins";
 
 @import "components/header", "components/about", "components/consortium",
-  "components/footer", "components/opencall";
-
+  "components/footer", "components/opencall", "components/card";
 @import "base/base", "base/reset";
