--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -1,11 +1,17 @@
 .card__container {
-  width: 100%;
-  padding: 1rem;
+  width: 70%; // padding: 1rem;
   cursor: pointer;
   &-image {
     justify-content: center;
   }
   &-text {
+    padding-top: 1.5rem;
     text-align: center;
+  }
+  @include small {
+    padding: 0 6rem;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
   }
 }
