--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -1,35 +1,71 @@
-.about__container {
-  padding: 3rem;
+.about {
+  @include small {
+    padding: 9rem 0;
+  }
+  padding: 9rem 3rem;
+  background-color: black;
+  color: rgb(221, 221, 221);
   h1 {
     padding-left: 3rem;
     padding-right: 3rem;
-    font-size: 3rem;
+    font-size: 5rem;
     padding-bottom: 3rem;
     text-align: center;
     font-weight: 500;
     text-transform: uppercase;
   }
-  @include med {
-    display: flex;
-    justify-content: center;
-    padding: 2rem;
-  }
-  &-image {
-    padding-bottom: 3rem;
-    // width: 100%;
-    img {
-      object-fit: cover;
+  .about__container {
+    @include small {
+      padding: 0rem;
     }
-  }
-  &-text {
-    text-align: justify;
-    font-size: 2rem;
-    font-weight: 200;
-    p {
-      padding-bottom: 3rem;
+
+    @include xl {
+      padding: 3rem 6rem;
     }
-    .middle-paragraph {
-      font-weight: 400;
+
+    @include xxl {
+      padding: 3rem 6rem;
+      display: flex;
+      flex-direction: row;
+    }
+
+    &-imageOne {
+      @include xl {
+        margin: 0;
+        padding: 0;
+      }
+      img {
+        object-fit: cover;
+      }
+    }
+    &-text {
+      padding-top: 0rem;
+      @include small {
+        padding: 3rem 0;
+      }
+      @include xl {
+        padding-top: 6rem;
+      }
+
+      @include xxl {
+        flex: 2;
+        padding-left: 3rem;
+      }
+
+      text-align: justify;
+      font-size: 2rem;
+      font-weight: 200;
+
+      p {
+        padding-bottom: 3rem;
+      }
+      .middle-paragraph {
+        font-weight: 400;
+      }
+    }
+    &-imageTwo {
+      padding: 3rem 6rem;
+      margin: 0;
     }
   }
 }
