--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,6 +1,7 @@
 .header {
   height: 100vh;
   width: 100vw;
+
   h1 {
     padding-top: 25rem;
     padding-left: 3rem;
@@ -10,6 +11,15 @@
     text-align: center;
     font-weight: 500;
     color: rgb(26, 25, 25);
+
+    @include small {
+      padding-top: 15rem;
+      font-size: 4rem;
+    }
+    @include med {
+      padding-top: 15rem;
+      font-size: 4rem;
+    }
   }
   h2 {
     padding-top: 5rem;
@@ -19,6 +29,10 @@
     padding-left: 3rem;
     padding-right: 3rem;
     color: rgb(26, 25, 25);
+    @include small {
+      padding-top: 3rem;
+      font-size: 2rem;
+    }
   }
 }
 #myVideo {
