add linked pages in footer

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 @import "abstracts/variables", "abstracts/mixins";
 
 @import "components/header", "components/about", "components/consortium",
-  "components/footer", "components/opencall", "components/card";
+  "components/footer", "components/opencall", "components/card",
+  "components/privacypolicy", "components/nondiscrimination";
 @import "base/base", "base/reset";
