--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,5 +2,6 @@
 
 @import "components/header", "components/about", "components/consortium",
   "components/footer", "components/opencall", "components/card",
-  "components/privacypolicy", "components/nondiscrimination";
+  "components/privacypolicy", "components/nondiscrimination",
+  "components/mailto";
 @import "base/base", "base/reset";
