--- a/src/styles/components/_consortium.scss
+++ b/src/styles/components/_consortium.scss
@@ -1,6 +1,7 @@
 .consortium__container {
   padding: 9rem 0;
-
+  @include xxl {
+  }
   h1 {
     @include small {
       font-size: 3rem;
@@ -9,10 +10,10 @@
     text-align: center;
     text-transform: uppercase;
     font-weight: 500;
+    padding-top: 3rem;
   }
 
   .cards__container {
-    // padding: 3rem;
     display: flex;
     align-items: baseline;
     padding: 3rem 35rem;
@@ -20,6 +21,9 @@
       display: flex;
       flex-direction: column;
       padding: 6rem 10rem;
+    }
+    @include med {
+      padding: 6rem 20rem;
     }
     @include xl {
       display: flex;
@@ -29,8 +33,9 @@
     @include xxl {
       display: flex;
       align-items: baseline;
-      padding: 3rem 35rem;
-      // justify-content: center;
+      padding: 3rem 55rem;
+      // width: 70%;
+      margin: 0;
     }
   }
 }
