--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -17,6 +17,12 @@
     justify-content: center;
     padding-left: 5rem;
     padding-bottom: 6rem;
+    @include small {
+      padding-left: 0;
+    }
+    @include med {
+      padding-left: 0;
+    }
   }
   &-logo {
     width: 100%;
@@ -41,6 +47,8 @@
     li {
       font-size: 1.5rem;
       font-weight: 200;
+      list-style: none;
+      padding: 0.4rem 0rem;
     }
   }
   &-about {
@@ -53,6 +61,9 @@
     li {
       font-size: 1.5rem;
       font-weight: 200;
+      color: white;
+      list-style: none;
+      padding: 0.4rem 0rem;
     }
   }
 }
