--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -1,5 +1,6 @@
 .card__container {
   width: 70%; // padding: 1rem;
+  padding: 0 1rem;
   cursor: pointer;
   &-image {
     justify-content: center;
