--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -6,13 +6,15 @@
   background-color: black;
   color: rgb(221, 221, 221);
   h1 {
-    padding-left: 3rem;
-    padding-right: 3rem;
     font-size: 5rem;
-    padding-bottom: 3rem;
-    text-align: center;
+    text-align: left;
     font-weight: 500;
     text-transform: uppercase;
+    padding-bottom: 3rem;
+    @include xxl {
+    }
+    @include med {
+    }
   }
   .about__container {
     padding: 3rem 6rem;
@@ -58,6 +60,7 @@
         flex: 2;
         padding-left: 3rem;
         padding-top: 0rem;
+        width: 50vw;
       }
 
       text-align: justify;
