--- a/src/styles/components/_opencall.scss
+++ b/src/styles/components/_opencall.scss
@@ -29,7 +29,7 @@
       padding-bottom: 3rem 0;
       display: block;
       @include xxl {
-        width: 250vw;
+        // width: 250vw;
       }
     }
     &-text {
