--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -1,18 +1,23 @@
 .card__container {
-  width: 70%; // padding: 1rem;
-  padding: 0 1rem;
   cursor: pointer;
+  padding: 1.5rem 1rem;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  @include med {
+    padding: 2rem 2rem;
+    // width: 50%;
+  }
+  @include xl {
+    padding: 0 6rem;
+  }
+
   &-image {
     justify-content: center;
+    align-items: center;
   }
   &-text {
     padding-top: 1.5rem;
     text-align: center;
-  }
-  @include small {
-    padding: 0 6rem;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
   }
 }
