--- a/src/styles/components/_consortium.scss
+++ b/src/styles/components/_consortium.scss
@@ -1,12 +1,11 @@
 .consortium__container {
   padding: 9rem 0;
-  @include xxl {
-  }
+
   h1 {
-    @include small {
-      font-size: 3rem;
+    @include med {
+      font-size: 5rem;
     }
-    font-size: 5rem;
+    font-size: 3rem;
     text-align: center;
     text-transform: uppercase;
     font-weight: 500;
@@ -15,27 +14,27 @@
 
   .cards__container {
     display: flex;
-    align-items: baseline;
-    padding: 3rem 35rem;
-    @include small {
-      display: flex;
-      flex-direction: column;
-      padding: 6rem 10rem;
-    }
+    flex-direction: column;
+    padding: 6rem 10rem;
+
     @include med {
-      padding: 6rem 20rem;
-    }
-    @include xl {
-      display: flex;
+      padding: 6rem 6rem;
+      flex-direction: row;
       align-items: baseline;
-      padding: 3rem 6rem;
     }
     @include xxl {
-      display: flex;
-      align-items: baseline;
-      padding: 3rem 55rem;
-      // width: 70%;
-      margin: 0;
+      padding: 3rem 20rem;
     }
+    // @include xl {
+    //   display: flex;
+    //   align-items: baseline;
+    //   padding: 3rem 6rem;
+    // }
+    // @include xxl {
+    //   display: flex;
+    //   align-items: baseline;
+    //   padding: 3rem 55rem;
+    // width: 70%;
+    // }
   }
 }
