--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -1,26 +1,24 @@
 .about {
-  @include small {
-    padding: 9rem 0;
-  }
-  padding: 6rem 0rem;
+  padding: 9rem 0;
   background-color: black;
   color: rgb(221, 221, 221);
+  @include med {
+    padding: 6rem 0rem;
+  }
   h1 {
     font-size: 5rem;
     text-align: left;
     font-weight: 500;
     text-transform: uppercase;
     padding-bottom: 3rem;
-    @include xxl {
-    }
-    @include med {
+
+    @include small {
+      font-size: 3.5rem;
     }
   }
   .about__container {
-    padding: 3rem 6rem;
-    @include small {
-      padding: 0 3rem;
-    }
+    padding: 3rem 2rem;
+
     @include med {
       padding: 3rem;
     }
@@ -28,7 +26,6 @@
     @include xl {
       padding: 3rem 6rem;
     }
-
     @include xxl {
       padding: 3rem 6rem;
       display: flex;
@@ -36,21 +33,24 @@
     }
 
     &-imageOne {
-      @include xl {
-        margin: 0;
-        padding: 0;
+      @include med {
+        width: 50%;
       }
+
       img {
-        object-fit: cover;
+        width: 200%;
       }
     }
+
     &-text {
       padding-top: 6rem;
-      @include small {
-        padding: 3rem 0;
-      }
+      font-size: 1.2rem;
+      text-align: justify;
+      font-weight: 200;
+
       @include med {
         padding-top: 6rem;
+        font-size: 2rem;
       }
       @include xl {
         padding-top: 6rem;
@@ -63,20 +63,17 @@
         width: 50vw;
       }
 
-      text-align: justify;
-      font-size: 2rem;
-      font-weight: 200;
-
       p {
         padding-bottom: 3rem;
+        line-height: 1.8rem;
+        @include med {
+          line-height: 2.3rem;
+        }
       }
+
       .middle-paragraph {
         font-weight: 400;
       }
-    }
-    &-imageTwo {
-      padding: 3rem 6rem;
-      margin: 0;
     }
   }
 }
